# ngx-tabs-libdemo

./: .angular-cli.json  .gitignore  .travis.yml  BUILD.bazel  README.md  WORKSPACE  angular.json  angular.tsconfig.json  package-lock.json  package.json  public_api.ts  rollup-esm2015.conf.js  rollup-esm5.conf.js  tsconfig-esm5.json  tsconfig.build.json  tsconfig.json  tsconfig.packaged.json  tslint.json
.circleci/: config.yml
apps/tabsdemo/e2e/: app.e2e-spec.ts  tsconfig.e2e.json
apps/tabsdemo/src/: index.html  tsconfig.app.json  tsconfig.app.packaged.json
apps/tabsdemo/src/app/: app.component.html  app.component.ts  app.module.ts
libs/ngx-tabs-core/: package.json  public_api.ts
libs/ngx-tabs-core/src/: messages.service.ts  ngx-tabs-core.module.spec.ts  ngx-tabs-core.module.ts
libs/ngx-tabs-lib/: package.json  public_api.ts
libs/ngx-tabs-lib/src/: ngx-tabs-lib.module.ts  tabs.component.html  tabs.component.spec.ts  tabs.component.ts
projects/ngx-tabs-lib/: ng-package.json  package.json
projects/ngx-tabs-lib/src/: public_api.ts
projects/ngx-tabs-lib/src/lib/: tabs.component.spec.ts
src/: BUILD.bazel  index.html  tabs.component.spec.ts  tabs.component.ts
src/app/: app.component.html  app.module.ts
tools/: bazel.rc
